--- a/angular-project/package.json
+++ b/angular-project/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
-    "rxjs": "~7.5.5",
+    "angular2-text-mask": "^9.0.0",
+    "js-brasil": "^2.5.3",
+    "ng-brazil": "^2.4.5",
+    "rxjs": "~6.5.3",
+    "text-mask-addons": "^3.8.0",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
   },
